# test_edapython

./: .gitignore  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: eda_analysis.rst  modules.rst  tests.rst
eda_analysis/: eda_analysis.py
src/: eda.py
src/eda_analysis/: eda_analysis.py
t_eda_analysis/: t_eda_analysis.py
tests/: test_eda_analysis.py  test_t_eda_analysis.py
