[tool.poetry]
name = "eda_analysis"
version = "0.1.0"
description = "Conduct inital EDA analysis for exploring data in a dataframe."
authors = ["sweber15 <sarah.weber@live.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"
altair = "^3.2.0"
IPython = "^7.13.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
flake8 = "^3.7.9"
codecov = "^2.0.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
