[tool.poetry]
name = "eda_analysis"
version = "0.1.0"
description = "Conduct inital EDA analysis for exploring data in a dataframe."
authors = ["sweber15 <sarah.weber@live.ca>",
           "v5y8 <jamesliu1991@gmail.com>",
            "sgauravm <sgauravm@github.com>",
            "marvinmin <marvinmin@github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/edapython"
repository = "https://github.com/UBC-MDS/edapython"
documentation = 'https://edapython.readthedocs.io/'

[tool.semantic_release]
version_variable = "eda_analysis/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"
altair = "^3.2.0"
IPython = "^7.13.0"
python-semantic-release = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
flake8 = "^3.7.9"
codecov = "^2.0.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
